<resources>
    <string name="app_name">DesignFreelance</string>
    <string name="wcag_notifications">Notifications</string>
    <string name="wcag_support">24 hours support</string>
    <string name="amount_placeholder">У розмірі: {amount}грн</string>
    <string name="next_payment">Наступне зняття</string>
    <string name="credit">Кредит</string>
    <string name="deposit">Поповнити</string>
    <string name="active_services">Активні послуги</string>
    <string name="services">Сервіси</string>
    <string name="day">День</string>
    <string name="month">Місяць</string>
    <string name="year">Рік</string>
    <string name="home">Головна</string>
    <string name="payments">Платежi</string>
    <string name="services_menu">Послуги</string>
    <string name="profile">Профiль</string>
    <string name="tv">TV</string>
    <string name="combo">Комбо</string>
    <string name="user_card">Карточка абонента:</string>
    <string name="discount">Знижка</string>
    <string name="code">Код платежу</string>
    <string name="address">Адреса</string>
    <string name="together_text">Ви з нами вже {count} днів!</string>
    <string name="payment_text">Абонентська плата</string>
    <string name="next_payment_text">Наступне зняття {date}\nу розмірі {price}</string>
    <string name="logout">Вийти</string>
    <string name="phone">Телефон:</string>
    <string name="phone_1">+38 (044) 5555 512</string>
    <string name="phone_2">+38 (044) 5555 513</string>
    <string name="email">Email:</string>
    <string name="email_address">info@support.ua</string>
    <string name="web_site">Веб сайт:</string>
    <string name="website_url">https://my.euronet.com.ua/</string>
    <string name="address_">Адреса:</string>
    <string name="address_name">м. Київ, метро Почайна</string>
    <string name="viber">Viber:</string>
    <string name="viber_number">+38 (044) 5555 514</string>
    <string name="telegram">Telegram:</string>
    <string name="telegram_nickname">\@Telegram</string>
    <string name="internet">Інтернет</string>
    <string name="other">Інше</string>
    <string name="deposit_text">Поповнення рахунку</string>
    <string name="image_back">Image back</string>
    <string name="monobank">monopay</string>
    <string name="gpay">Pay</string>
    <string name="deposit_sum">Сума поповнення</string>
    <string name="ukr_hryvnia">₴</string>
    <string name="placeholder_400"><u>400₴</u></string>
    <string name="placeholder300"><u>300₴</u></string>
    <string name="placeholder200"><u>200₴</u></string>
    <string name="promotion_text">ПРИ ПОПОВНЕННІ РАХУНКУ НА СУМУ ВІД 6 МІСЯЦІВ\nДОДАТКОВО 1 МІСЯЦЬ БЕЗКОШТОВНО\n\nПРИ ПОПОВНЕННІ РАХУНКУ НА СУМУ ВІД 12 МІСЯЦІВ\nДОДАТКОВО 3 МІСЯЦІ БЕЗКОШТОВНО</string>
    <string name="personal_payment_code">Ваш персональний платіжний код</string>
    <string name="personal_payment_code_hint">Персональний платіжний код</string>
    <string name="edit_value">Edit value</string>
    <string name="zero_placeholder">0</string>
</resources>