<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="90dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintWidth_max="500dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/imageBack"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_back"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/image_back"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="@string/deposit_text"
                        android:fontFamily="@font/gilroy_medium"
                        android:layout_marginStart="16dp"/>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/euro_net_logo"
                        app:layout_constraintDimensionRatio="16:9"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginHorizontal="50dp"
                        android:importantForAccessibility="no"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/promotionalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/promotion_text"
                        android:layout_marginHorizontal="16dp"
                        android:paddingVertical="16dp"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/gilroy_medium"
                            android:text="@string/personal_payment_code"
                            android:gravity="center"
                            android:layout_marginHorizontal="16dp"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginHorizontal="16dp">

                            <EditText
                                android:id="@+id/editPaymentCode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroy_bold"
                                android:textSize="16sp"
                                android:hint="@string/personal_payment_code_hint"
                                android:visibility="gone"
                                android:textColorHint="@color/text_gray"
                                android:gravity="center"
                                android:inputType="number"
                                android:cursorVisible="true"
                                android:textColor="@color/black"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:importantForAutofill="no"/>

                            <LinearLayout
                                android:id="@+id/linearPaymentCodeEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="parent"
                                android:orientation="horizontal"
                                android:gravity="center">

                                <TextView
                                    android:id="@+id/textPaymentCodeValue"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:textColor="@color/black"
                                    android:fontFamily="@font/gilroy_bold"
                                    tools:text="67676"/>

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:scaleType="fitCenter"
                                    android:src="@drawable/icon_edit"
                                    android:layout_marginStart="5dp"
                                    android:contentDescription="@string/edit_value"/>

                            </LinearLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/gilroy_medium"
                            android:text="@string/deposit_sum"
                            android:gravity="center"
                            android:layout_marginHorizontal="16dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginHorizontal="16dp">

                            <EditText
                                android:id="@+id/editSumDeposit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/gilroy_bold"
                                android:background="@android:color/transparent"
                                android:textSize="26sp"
                                android:hint="@string/zero_placeholder"
                                android:textColorHint="@color/text_gray"
                                android:gravity="end"
                                android:inputType="number"
                                android:cursorVisible="false"
                                android:textColor="@color/black"
                                android:importantForAutofill="no"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/gilroy_bold"
                                android:background="@android:color/transparent"
                                android:text="@string/ukr_hryvnia"
                                android:textSize="26sp"
                                android:textColor="@color/black"
                                android:layout_marginStart="2dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:orientation="horizontal"
                            android:layout_marginTop="18dp"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/text200"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:text="@string/placeholder200"
                                android:fontFamily="@font/gilroy_medium"
                                android:layout_marginEnd="7dp"/>

                            <TextView
                                android:id="@+id/text300"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:text="@string/placeholder300"
                                android:fontFamily="@font/gilroy_medium"
                                android:layout_marginEnd="7dp"
                                android:layout_marginStart="7dp"/>

                            <TextView
                                android:id="@+id/text400"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:text="@string/placeholder_400"
                                android:fontFamily="@font/gilroy_medium"
                                android:layout_marginStart="7dp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="10dp"
        android:background="@color/color_background">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/service_gray"
            android:layout_marginBottom="10dp"
            android:alpha="0.3"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintWidth_max="500dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/buttonMonoPay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/monobank"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/gilroy_bold"
                    android:background="@drawable/background_monopay"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.gms.wallet.button.PayButton
                    android:id="@+id/buttonGPay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintWebView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.cloudipsp.android.CloudipspWebView
            android:id="@+id/cloudipspWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_background"/>

        <ImageView
            android:id="@+id/imageCross"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_cross"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>